--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -21,7 +21,7 @@
         <div style="text-align:center">
             <span id = "Aufgaben"></span>
         </div>
-    
+
 
 
         <div id="sketching_panel">
@@ -46,11 +46,11 @@
         <script src="./ellipse.js"></script>
         <script src="./Sketching.js"></script>
 
-        <h3>TODO!!</h3>
-		<ul>
+        <!-- <h3>TODO!!</h3> -->
+		<!-- <ul>
         	<li>Viel Freihand und dann eine Linie malen -> Linie laggt (Canvas neu zeichnen dauert dann zu lange)</li>
         	<li><b>Bug:</b> Manchmal, wenn man eine Form auswählt und dann eine Farbe, kommt ein Error (siehe Konsole).</li>
         </ul>
-        <style>li { margin-bottom: 1em; }</style>
+        <style>li { margin-bottom: 1em; }</style> -->
     </body>
 </html>
