--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -9,8 +9,11 @@
     </head>
 
     <body>
-        <h1>Sketching</h1>
         <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+        <script src="../html-snippets/w3-include-HTML.js"></script>
+
+        <h1>Sketching</h1>
+
 
 
         <script src="themen.js"></script>
@@ -46,11 +49,5 @@
         <script src="./ellipse.js"></script>
         <script src="./Sketching.js"></script>
 
-        <!-- <h3>TODO!!</h3> -->
-		<!-- <ul>
-        	<li>Viel Freihand und dann eine Linie malen -> Linie laggt (Canvas neu zeichnen dauert dann zu lange)</li>
-        	<li><b>Bug:</b> Manchmal, wenn man eine Form auswählt und dann eine Farbe, kommt ein Error (siehe Konsole).</li>
-        </ul>
-        <style>li { margin-bottom: 1em; }</style> -->
     </body>
 </html>
