--- a/Mathematik/Kopfrechnen.html
+++ b/Mathematik/Kopfrechnen.html
@@ -21,7 +21,8 @@
     <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
     <script src="../html-snippets/w3-include-HTML.js"></script>
 
-        <script src="Mathematik.js"></script>
+        <script src="Kopfrechnen.js"></script>
+        <script src="utils.js"></script>
 
 		<span id="left_operand">a</span>
 		<span id="operator">+</span>
