--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -8,16 +8,17 @@
     <!-- Startseite -->
     <body onload="init()"> <!-- Alles, was man sieht -->  
 
-    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
-    <script src="../html-snippets/w3-include-HTML.js"></script>
+		<style>@import "../html-snippets/navBar/navBar.css"</style> <!--TODO: diese Zeile löschen, wenn es eine richtige .css für Zahlenreihen gibt -->
+	    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+	    <script src="../html-snippets/w3-include-HTML.js"></script>
 
-    <script src="Zahlenreihen.js"></script>
-    <script src="utils.js"></script>
+	    <script src="Zahlenreihen.js"></script>
+	    <script src="utils.js"></script>
 
-	<span id="numbers"></span>
-    <input id="result_input"></input>
-	<button id="submit_button" onclick="submit()">Submit</button>
-	<button id="solution_button" onclick="showSolution()">Solution</button>
-	<span id="feedback"></span>
+		<span id="numbers"></span>
+	    <input id="result_input"></input>
+		<button id="submit_button" onclick="submit()">Submit</button>
+		<button id="solution_button" onclick="showSolution()">Solution</button>
+		<span id="feedback"></span>
 
     </body>
