next button hinzugefügt, zahlenreihen aufgaben etwas leichter gemacht

--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -19,6 +19,7 @@
 	    <input id="result_input"></input>
 		<button id="submit_button" onclick="submit()">Submit</button>
 		<button id="solution_button" onclick="showSolution()">Solution</button>
+		<button id="next_button" onclick="init()">Next</button>
 		<span id="feedback"></span>
 
     </body>
