--- a/Mathematik/Kopfrechnen.html
+++ b/Mathematik/Kopfrechnen.html
@@ -9,30 +9,31 @@
     <!-- Startseite -->
     <body onload="init()"> <!-- Alles, was man sieht -->  
 
-    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
-    <script src="../html-snippets/w3-include-HTML.js"></script>
+	    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+	    <script src="../html-snippets/w3-include-HTML.js"></script>
 
-    <h1>Kopfrechnen</h1>
+	    <h1>Kopfrechnen</h1>
 
-    <p>Kennst das Problem: Du möchtest gerade etwas ausrechnen, aber hast keinen Taschenrechner parat? 
-        Gar nicht so einfach und ziemlich zeitintensiv oder?
-        Denn heutzutage wird viel zu viel mit dem Taschenrechner gerechnet.
-        Es ist dennoch wichtig regelmäßig ein Paar Matheaufgaben im Kopf auszurechnen, damit dein logisches Denken und deine Konzentrationsfähigkeit gesteigert werden.
-        Hier bieten wir dir ein Paar Beispiel-Aufgaben.
-    </p>
+	    <p>Kennst das Problem: Du möchtest gerade etwas ausrechnen, aber hast keinen Taschenrechner parat? 
+	        Gar nicht so einfach und ziemlich zeitintensiv oder?
+	        Denn heutzutage wird viel zu viel mit dem Taschenrechner gerechnet.
+	        Es ist dennoch wichtig regelmäßig ein Paar Matheaufgaben im Kopf auszurechnen, damit dein logisches Denken und deine Konzentrationsfähigkeit gesteigert werden.
+	        Hier bieten wir dir ein Paar Beispiel-Aufgaben.
+	    </p>
 
-    <script src="Kopfrechnen.js"></script>
-    <script src="utils.js"></script>
+	    <script src="Kopfrechnen.js"></script>
+	    <script src="utils.js"></script>
 
-	<span id="left_operand">a</span>
-	<span id="operator">+</span>
-	<span id="right_operand">b</span>
-	<span>=</span>
-    <input id="result_input"></input>
-    <br>
-    <br>
-    <br>
-	<button id="submit_button" onclick="submit()">Submit</button>
-	<button id="solution_button" onclick="showSolution()">Solution</button>
-	<span id="feedback"></span>
+		<span id="left_operand"></span>
+		<span id="operator"></span>
+		<span id="right_operand"></span>
+		<span>=</span>
+	    <input id="result_input"></input>
+	    <br>
+	    <br>
+	    <br>
+		<button id="submit_button" onclick="submit()">Submit</button>
+		<button id="solution_button" onclick="showSolution()">Solution</button>
+		<button id="next_button" onclick="init()">Next</button>
+		<span id="feedback"></span>
     </body>
