Navbar angepasst+ Sudoku html erstellt

--- a/html-snippets/navBar/navBar.html
+++ b/html-snippets/navBar/navBar.html
@@ -12,7 +12,10 @@
         <button class="dropbtn">Los</button>
         <div class="dropdown-content">
             <a href="../Startseite/Startseite.html">Startseite</a>
-            <a href="../Mathematik/Mathematik.html">Mathematik und Rätsel</a>
+            <!--<a href="../Mathematik/Mathematik.html">Mathematik und Rätsel</a>-->
+            <a href="../Mathematik/Kopfrechnen.html">Kopfrechnen</a>
+            <a href="../Mathematik/Zahlenreihen.html">Zahlenreihen</a>
+            <a href="../Mathematik/Sudoku.html">Sudoku</a>
             <a href="../Meditation/Meditation.html">Meditation</a>
             <a href="../Sketching/Sketching.html">Sketching</a>
             <!-- <a href="../Rätsel/Rätsel.html">Rätsel</a>  -->
