Navbar left in Sketching

--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -11,7 +11,7 @@
     <body>
         <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
         <script src="../html-snippets/w3-include-HTML.js"></script>
-
+        <div id = "Content">
         <h1>Sketching</h1>
 
 
@@ -48,6 +48,7 @@
         <script src="./rect.js"></script>
         <script src="./ellipse.js"></script>
         <script src="./Sketching.js"></script>
+    </div>
 
     </body>
 </html>
