--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -48,7 +48,12 @@
         <script src="./rect.js"></script>
         <script src="./ellipse.js"></script>
         <script src="./Sketching.js"></script>
-    </div>
+    
+    <br>
+    <br>
+    <p> Hier kannst du deinen Gedanken freien Lauf lassen und dir zu beliebigem Thema Mindmaps erstellen...</p>
+    <br>
 
+    </div>
     </body>
 </html>
