--- a/Mathematik/Kopfrechnen.html
+++ b/Mathematik/Kopfrechnen.html
@@ -11,7 +11,7 @@
 
 	    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
 	    <script src="../html-snippets/w3-include-HTML.js"></script>
-
+		<div style="text-align: center;">
 	    <h1>Kopfrechnen</h1>
 
 	    <p>Kennst das Problem: Du möchtest gerade etwas ausrechnen, aber hast keinen Taschenrechner parat? 
@@ -36,4 +36,5 @@
 		<button id="solution_button" onclick="showSolution()">Solution</button>
 		<button id="next_button" onclick="init()">Next</button>
 		<span id="feedback"></span>
+		</div>
     </body>
