--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -6,7 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <!-- Startseite -->
-    <body onload="init()"> <!-- Alles, was man sieht -->  
+	<body onload="init()"> <!-- Alles, was man sieht -->  
+		
+		<h1>Zahlenreihen</h1>
+
+		<p>Löse folgende Zahlenreihe. </p>
+		<br>
+		<p>Vorgehensweise: Welche Zahl musst du addieren, um von Zahl 1 auf Zahl 2 zu kommen? Diese Zahl addierst du mit der Zahl, die du addieren musst, um von Zahl 2 auf Zahl 3 zu kommen usw.</p>
 
 		<style>@import "../html-snippets/navBar/navBar.css"</style> <!--TODO: diese Zeile löschen, wenn es eine richtige .css für Zahlenreihen gibt -->
 	    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
