--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -1,6 +1,7 @@
 
     <head> <!-- Zusatzinfo für den Browser-->
-        <title>MPS</title>
+		<title>MPS</title>
+		<link rel="stylesheet" href="Zahlenreihen.css"/>
         <script src="../html-snippets/navBar/navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
