--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -85,5 +85,16 @@
             <!--            https://codepen.io/terned/pen/bRPmQg-->
 
         </div>
+        <div class="button-group">
+
+        <div id="buttons" class="wrapper">
+          <div class="one"><button>Mathematik</button></div>
+          <div class="three"><button>Meditation</button></div>
+          <div class="five"><button>Sketching</button></div>
+          <div class="four"><button class="double">Rätsel</button></div>
+          <div class="two"><button class="double">DesignThinking</button></div>
+        </div>
+
+        </div>
     </body>
 </html>
