--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -1,5 +1,7 @@
+<!DOCTYPE>
+<html>
 
-    <head> <!-- Zusatzinfo für den Browser-->
+   <head> <!-- Zusatzinfo für den Browser-->
 		<title>MPS</title>
 		<link rel="stylesheet" href="Zahlenreihen.css"/>
         <script src="../html-snippets/navBar/navBar.js"></script>
@@ -8,6 +10,9 @@
     </head>
     <!-- Startseite -->
 	<body onload="init()"> <!-- Alles, was man sieht -->  
+
+		<div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+		<script src="../html-snippets/w3-include-HTML.js"></script>
 		
 		<h1>Zahlenreihen</h1>
 
@@ -15,9 +20,8 @@
 		<br>
 		<p>Vorgehensweise: Welche Zahl musst du addieren, um von Zahl 1 auf Zahl 2 zu kommen? Diese Zahl addierst du mit der Zahl, die du addieren musst, um von Zahl 2 auf Zahl 3 zu kommen usw.</p>
 
-		<style>@import "../html-snippets/navBar/navBar.css"</style> <!--TODO: diese Zeile löschen, wenn es eine richtige .css für Zahlenreihen gibt -->
-	    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
-	    <script src="../html-snippets/w3-include-HTML.js"></script>
+		
+	    
 
 	    <script src="Zahlenreihen.js"></script>
 	    <script src="utils.js"></script>
@@ -30,3 +34,4 @@
 		<span id="feedback"></span>
 
     </body>
+</html>
