versuch mit buttons

--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -3,6 +3,7 @@
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
         <link rel="stylesheet" href="./Startseite.css"/>
+        <link rel="stylesheet" href="./test.css"/>
         <script src="../html-snippets/navBar/navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -91,19 +92,18 @@
 
 </div>
 -->
-
+                <script src="./Startseite.js"></script>
         <div class="button-group">
-
             <div id="buttons" class="wrapper">
-                <div class="one"><button>Books</button></div>
+                <div class="one"><button>B</button></div>
                 <div class="three"><button>App</button></div>
-                <div class="five"><button>Meals</button></div>
+                <div class="five"><button>Mealfghvs</button></div>
                 <div class="four"><button class="double">Paper<br>Play</button></div>
                 <div class="two"><button class="double">On The<br>Go</button></div> 
             </div>
 
         </div>
 
-        <script src="./Startseite.js"></script>
+
     </body>
 </html>
