--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -10,7 +10,7 @@
     </head>
     <!-- Startseite -->
 	<body onload="init()"> <!-- Alles, was man sieht -->  
-
+		<div style="text-align: center;">
 		<div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
 		<script src="../html-snippets/w3-include-HTML.js"></script>
 		
@@ -27,11 +27,15 @@
 	    <script src="utils.js"></script>
 
 		<span id="numbers"></span>
-	    <input id="result_input"></input>
-		<button id="submit_button" onclick="submit()">Submit</button>
-		<button id="solution_button" onclick="showSolution()">Solution</button>
-		<button id="next_button" onclick="init()">Next</button>
+		<input id="result_input"></input>
+		<br>
+		<br>
+		<button id="submit_button" onclick="submit()">Bestätigen</button>
+		<button id="solution_button" onclick="showSolution()">Lösung</button>
+		<button id="next_button" onclick="init()">Nächste Aufgabe</button>
+		<br>
 		<span id="feedback"></span>
 
+		</div>
     </body>
 </html>
