Sketching zentriert und Kopfrechenen äquivalent zu Zahlenreihen gemacht

--- a/Mathematik/Kopfrechnen.html
+++ b/Mathematik/Kopfrechnen.html
@@ -32,9 +32,10 @@
 	    <br>
 	    <br>
 	    <br>
-		<button id="submit_button" onclick="submit()">Submit</button>
-		<button id="solution_button" onclick="showSolution()">Solution</button>
-		<button id="next_button" onclick="init()">Next</button>
+		<button id="submit_button" onclick="submit()">Bestätigen</button>
+		<button id="solution_button" onclick="showSolution()">Lösung</button>
+		<button id="next_button" onclick="init()">Nächste Aufgabe</button>
+		<br>
 		<span id="feedback"></span>
 		</div>
     </body>
