Buttons verlinkt und versucht zu reparieren, hat aber nicht ganz geklappt

--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -92,18 +92,36 @@
 
 </div>
 -->
+    <div id="window3">
                 <script src="./Startseite.js"></script>
-        <div class="button-group">
+       <!--  <div class="button-group">
             <div id="buttons" class="wrapper">
-                <div class="one"><button>B</button></div>
-                <div class="three"><button>App</button></div>
-                <div class="five"><button>Mealfghvs</button></div>
-                <div class="four"><button class="double">Paper<br>Play</button></div>
-                <div class="two"><button class="double">On The<br>Go</button></div> 
+                <div class="one"><button onclick="window.location.href = '../Mathematik/Zahlenreihen.html';">Zahlenreihen</button></div>
+                <div class="three"><button onclick="window.location.href = '../Meditation/Meditation.html';">Meditation</button></div>
+                <div class="five"><button onclick="window.location.href = '../Sketching/Sketching.html';">Sketching</button></div>
+                <div class="four"><button onclick="window.location.href = '../Mathematik/Sudoku.html';">Sudoku</button></div>
+                <div class="two"><button onclick="window.location.href = '../Mathematik/Kopfrechnen.html';">Kopfrechnen</button></div> 
             </div>
 
+        </div>-->
+        
+        <div class="wrap">
+            <button onclick="window.location.href = '../Mathematik/Zahlenreihen.html';">Zahlenreihen</button>
+        </div>
+        <div class="wrap">
+            <button onclick="window.location.href = '../Meditation/Meditation.html';">Meditation</button>
+        </div>
+        <div class="wrap">
+            <button onclick="window.location.href = '../Sketching/Sketching.html';">Sketching</button>
+        </div>
+        <div class="wrap">
+            <button onclick="window.location.href = '../Mathematik/Sudoku.html';">Sudoku</button>
+        </div>
+        <div class="wrap"></div>
+            <button onclick="window.location.href = '../Mathematik/Kopfrechnen.html';">Kopfrechnen</button>
         </div>
 
+    </div>
 
     </body>
 </html>
