--- a/Mathematik/Kopfrechnen.html
+++ b/Mathematik/Kopfrechnen.html
@@ -7,18 +7,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <!-- Startseite -->
-    <body onload="init()"> <!-- Alles, was man sieht -->  
+    <body onload="init()"> <!-- Alles, was man sieht -->
 
 	    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
 	    <script src="../html-snippets/w3-include-HTML.js"></script>
 		<div style="text-align: center;">
 	    <h1>Kopfrechnen</h1>
 
-	    <p>Kennst das Problem: Du möchtest gerade etwas ausrechnen, aber hast keinen Taschenrechner parat? 
-	        Gar nicht so einfach und ziemlich zeitintensiv oder?
-	        Denn heutzutage wird viel zu viel mit dem Taschenrechner gerechnet.
-	        Es ist dennoch wichtig regelmäßig ein Paar Matheaufgaben im Kopf auszurechnen, damit dein logisches Denken und deine Konzentrationsfähigkeit gesteigert werden.
-	        Hier bieten wir dir ein Paar Beispiel-Aufgaben.
+	    <p>Kennst du das Problem: du stehst beim Bäcker und möchtest ausrechnen wieviel du zahlen musst, brauchst aber ewig lange dafür? Ziemlich nervig oder?
+Heutzutage wird überall nur noch mit Computersystemen oder mit dem Taschenrechner gerechnet. Und wenn wir mal nicht beim Bäcker sind oder noch zur Schule gehen, kommen wir gar nicht mehr dazu was im Kopf auszurechnen -  obwohl genau das sehr wichtig ist! Denn bei gutem Training steigerst du nicht nur deine Konzentrationsfähigkeit, sondern schaffst es auch Krankheiten wie beispielsweise Alzheimer aufzuhalten und auch im hohen Alter noch klarzudenken.
+
+Damit sich unser Gehirn schön weiterentwickelt, hast du auf dieser Seite die Möglichkeit Kopfrechenaufgaben zu lösen.
+Viel Spaß :-)
 	    </p>
 
 	    <script src="Kopfrechnen.js"></script>
