--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -9,19 +9,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <!-- Startseite -->
-	<body onload="init()"> <!-- Alles, was man sieht -->  
+	<body onload="init()"> <!-- Alles, was man sieht -->
 		<div style="text-align: center;">
 		<div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
 		<script src="../html-snippets/w3-include-HTML.js"></script>
-		
+
 		<h1>Zahlenreihen</h1>
 
-		<p>Löse folgende Zahlenreihe. </p>
-		<br>
-		<p>Vorgehensweise: Welche Zahl musst du addieren, um von Zahl 1 auf Zahl 2 zu kommen? Diese Zahl addierst du mit der Zahl, die du addieren musst, um von Zahl 2 auf Zahl 3 zu kommen usw.</p>
+	
+		<p>So wie mit Kopfrechenaufgaben, kannst du auch sehr gut mit Zahlenreihen deine Konzentrationsfähigkeit steigern. Hier noch ein kleines Beispiel wie man solche Zahlenreihen berechnet:
+2,5,7,10,12,15
+Bei dieser Zahlenreihe wird abwechselnd erst eine 3 und dann eine 2 dazu addiert. Also müsste nach der 15 die 17 kommen 
+</p>
 
-		
-	    
+
+
 
 	    <script src="Zahlenreihen.js"></script>
 	    <script src="utils.js"></script>
