--- a/html-snippets/navBar/navBar.html
+++ b/html-snippets/navBar/navBar.html
@@ -9,7 +9,7 @@
         <li class="parent"><a href="#">Los</a>
             <ul class="child">
                 <li><a href="../Startseite/Startseite.html">Startseite</a></li>
-                <li class="parent"><a href="#">Rätsel <span class="expand">»</span></a>
+                <li class="parent"><a href="#">Mathematik <span class="expand">»</span></a>
                     <ul class="child">
                         <li><a href="../Mathematik/Kopfrechnen.html">Kopfrechnen</a></li>
                         <li><a href="../Mathematik/Zahlenreihen.html">Zahlenreihen</a></li>
@@ -21,7 +21,7 @@
             </ul>
         </li>
         <li class="parent"><a href="#">Über</a>
-            <ul class="child">			
+            <ul class="child">
                 <li><a href="#warum">Warum</a></li>
                 <li><a href="#wie funktionierts">Wie funktioniert's?</a></li>
             </ul>
