Slideshow raetsel seite entfernt und kopfrechnen und Zahlenreihen hinzugefuegt. Links angepasst.

--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -30,35 +30,38 @@
             <!--            https://www.w3schools.com/howto/howto_js_slideshow.asp-->
             <div class="slideshow-container videopadding">
                 <div class="mySlides fade">
-                    <a href="#mathe">
+                    <a href="../Mathematik/Kopfrechnen.html">
                         <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
+                        <div class="imgText">
+                            Kopfrechnen
+                        </div>
                     </a>
-                    <div class="imgText">
-                        Mathematik & Rätsel:
-                        Hier findest du Aufgaben im Bereich Mathematik und Rätsel. Wir haben Kopfrechenaufgaben, Sudokus, und viele weitere interessante Aufgaben, um deine Konzentrationsfähigkeit zu steigern. 
-                    </div>
                 </div>
                 <div class="mySlides fade">
-                    <a href="#meditation">
+                    <a href="../Mathematik/Zahlenreihen.html">
+                        <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
+                        <div class="imgText">
+                            Zahlenreihen
+                        </div>
+                    </a>
+                </div>
+                <div class="mySlides fade">
+                    <a href="../Meditation/Meditation.html">
                         <img src="../Meditation/Meditation.jpg" class="responsiveImg">
+
+                        <div class="imgText">Meditation:
+                            Schalte ab und mache deinen Kopf frei. Gönn dir eine Pause, danach bist du viel effektiver! Schaue vorbei um mehr zu erfahren.
+                        </div>
                     </a>
-                    <div class="imgText">Meditation &  Yoga:
-                        Schalte ab und mache deinen Kopf frei. Gönn dir eine Pause, danach bist du viel effektiver! Schaue vorbei um mehr zu erfahren.
-                    </div>
                 </div>
                 <div class="mySlides fade">
-                    <a href="#sketching">
+                    <a href="../Sketching/Sketching.html">
                         <img src="../Sketching/Sketching.jpeg" class="responsiveImg">
+
+                        <div class="imgText">Sketching:
+                            Hier kannst du deinen Gedanken freien lauf lassen. Entweder du skizzierst etwas, das dir selbst gefällt oder wenn du keine eigenen Ideen hast, haben wir Themenfelder für dich vorbereitet. Erstelle eine Mindmap, gerne auch im Team!
+                        </div>
                     </a>
-                    <div class="imgText">Sketching:
-                        Hier kannst du deinen Gedanken freien lauf lassen. Entweder du skizzierst etwas, das dir selbst gefällt oder wenn du keine eigenen Ideen hast, haben wir Themenfelder für dich vorbereitet. Erstelle eine Mindmap, gerne auch im Team!</div>
-                </div>
-                <div class="mySlides fade">
-                    <a href="#raetsel">
-                        <img src="../Rätsel/Rätsel.jpg" class="responsiveImg">
-                    </a>
-                    <div class="imgText">Rätsel
-                        Lorem ipsum dolor sit amet, </div>
                 </div>
 
                 <!-- Next and previous buttons -->
@@ -92,36 +95,36 @@
 
 </div>
 -->
-    <div id="window3">
-                <script src="./Startseite.js"></script>
-       <!--  <div class="button-group">
-            <div id="buttons" class="wrapper">
-                <div class="one"><button onclick="window.location.href = '../Mathematik/Zahlenreihen.html';">Zahlenreihen</button></div>
-                <div class="three"><button onclick="window.location.href = '../Meditation/Meditation.html';">Meditation</button></div>
-                <div class="five"><button onclick="window.location.href = '../Sketching/Sketching.html';">Sketching</button></div>
-                <div class="four"><button onclick="window.location.href = '../Mathematik/Sudoku.html';">Sudoku</button></div>
-                <div class="two"><button onclick="window.location.href = '../Mathematik/Kopfrechnen.html';">Kopfrechnen</button></div> 
-            </div>
+        <div id="window3">
+            <script src="./Startseite.js"></script>
+            <!--  <div class="button-group">
+<div id="buttons" class="wrapper">
+<div class="one"><button onclick="window.location.href = '../Mathematik/Zahlenreihen.html';">Zahlenreihen</button></div>
+<div class="three"><button onclick="window.location.href = '../Meditation/Meditation.html';">Meditation</button></div>
+<div class="five"><button onclick="window.location.href = '../Sketching/Sketching.html';">Sketching</button></div>
+<div class="four"><button onclick="window.location.href = '../Mathematik/Sudoku.html';">Sudoku</button></div>
+<div class="two"><button onclick="window.location.href = '../Mathematik/Kopfrechnen.html';">Kopfrechnen</button></div> 
+</div>
 
-        </div>-->
-        
-        <div class="wrap">
-            <button onclick="window.location.href = '../Mathematik/Zahlenreihen.html';">Zahlenreihen</button>
-        </div>
-        <div class="wrap">
-            <button onclick="window.location.href = '../Meditation/Meditation.html';">Meditation</button>
-        </div>
-        <div class="wrap">
-            <button onclick="window.location.href = '../Sketching/Sketching.html';">Sketching</button>
-        </div>
-        <div class="wrap">
-            <button onclick="window.location.href = '../Mathematik/Sudoku.html';">Sudoku</button>
-        </div>
-        <div class="wrap"></div>
+</div>-->
+
+            <div class="wrap">
+                <button onclick="window.location.href = '../Mathematik/Zahlenreihen.html';">Zahlenreihen</button>
+            </div>
+            <div class="wrap">
+                <button onclick="window.location.href = '../Meditation/Meditation.html';">Meditation</button>
+            </div>
+            <div class="wrap">
+                <button onclick="window.location.href = '../Sketching/Sketching.html';">Sketching</button>
+            </div>
+            <div class="wrap">
+                <button onclick="window.location.href = '../Mathematik/Sudoku.html';">Sudoku</button>
+            </div>
+            <div class="wrap"></div>
             <button onclick="window.location.href = '../Mathematik/Kopfrechnen.html';">Kopfrechnen</button>
         </div>
 
-    </div>
+        </div>
 
     </body>
 </html>
