--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="mySlides fade">
                     <a href="../Mathematik/Zahlenreihen.html">
-                        <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
+                        <img src="../Mathematik/matrix.jpg" class="responsiveImg">
                         <div class="imgText">
                             Zahlenreihen
                         </div>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="mySlides fade">
                     <a href="../Sketching/Sketching.html">
-                        <img src="../Sketching/Sketching.jpeg" class="responsiveImg">
+                        <img src="../Sketching/sketching2.webp" class="responsiveImg">
 
                         <div class="imgText">Sketching:
                             Hier kannst du deinen Gedanken freien lauf lassen. Entweder du skizzierst etwas, das dir selbst gefällt oder wenn du keine eigenen Ideen hast, haben wir Themenfelder für dich vorbereitet. Erstelle eine Mindmap, gerne auch im Team!
