Beschreibungen Kopfrechnen und Zahlenreihen

--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -33,7 +33,8 @@
                     <a href="../Mathematik/Kopfrechnen.html">
                         <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
                         <div class="imgText">
-                            Kopfrechnen
+                            Kopfrechnen<br/>
+                            Bring deine grauen Gehinrzellen wieder in Schwung! Unere einfachen Kopfrechenaufgaben helfen dir dabei.
                         </div>
                     </a>
                 </div>
@@ -41,7 +42,8 @@
                     <a href="../Mathematik/Zahlenreihen.html">
                         <img src="../Mathematik/matrix.jpg" class="responsiveImg">
                         <div class="imgText">
-                            Zahlenreihen
+                            Zahlenreihen<br/>
+                            Hast du Lust auf Zahlenrätsel? Dann bist du hier genau Richtig. Vervollständige die Zahlenreihen und fördere dein logisches Denken!
                         </div>
                     </a>
                 </div>
@@ -49,7 +51,7 @@
                     <a href="../Meditation/Meditation.html">
                         <img src="../Meditation/Meditation.jpg" class="responsiveImg">
 
-                        <div class="imgText">Meditation:
+                        <div class="imgText">Meditation<br/>
                             Schalte ab und mache deinen Kopf frei. Gönn dir eine Pause, danach bist du viel effektiver! Schaue vorbei um mehr zu erfahren.
                         </div>
                     </a>
@@ -58,7 +60,7 @@
                     <a href="../Sketching/Sketching.html">
                         <img src="../Sketching/sketching2.webp" class="responsiveImg">
 
-                        <div class="imgText">Sketching:
+                        <div class="imgText">Sketching<br/>
                             Hier kannst du deinen Gedanken freien lauf lassen. Entweder du skizzierst etwas, das dir selbst gefällt oder wenn du keine eigenen Ideen hast, haben wir Themenfelder für dich vorbereitet. Erstelle eine Mindmap, gerne auch im Team!
                         </div>
                     </a>
