kleiner Typo in Kopfrechnen slide

--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -34,7 +34,7 @@
                         <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
                         <div class="imgText">
                             Kopfrechnen<br/>
-                            Bring deine grauen Gehinrzellen wieder in Schwung! Unere einfachen Kopfrechenaufgaben helfen dir dabei.
+                            Bring deine grauen Gehinrzellen wieder in Schwung! Unsere einfachen Kopfrechenaufgaben helfen dir dabei.
                         </div>
                     </a>
                 </div>
