Text in Kopfrechnen angepasst und die Submit buttons in Kopfrechnen und Zahlenreihen nach Loesung unklickbar gemacht

--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -16,8 +16,8 @@
 
 		<h1>Zahlenreihen</h1>
 
-	
-		<p>So wie mit Kopfrechenaufgaben, kannst du auch sehr gut mit Zahlenreihen deine Konzentrationsfähigkeit steigern. Hier noch ein kleines Beispiel wie man solche Zahlenreihen berechnet:
+	   
+		<p>So wie mit Kopfrechenaufgaben, kannst du auch sehr gut mit Zahlenreihen deine Konzentrationsfähigkeit steigern. Hier noch ein kleines Beispiel wie man solche Zahlenreihen berechnet:<br/>
 2,5,7,10,12,15
 Bei dieser Zahlenreihe wird abwechselnd erst eine 3 und dann eine 2 dazu addiert. Also müsste nach der 15 die 17 kommen 
 </p>
