--- a/Mathematik/Kopfrechnen.html
+++ b/Mathematik/Kopfrechnen.html
@@ -1,41 +1,41 @@
 
-    <head> <!-- Zusatzinfo für den Browser-->
-        <title>MPS</title>
-        <link rel="stylesheet" href="Kopfrechnen.css"/>
-        <script src="../html-snippets/navBar/navBar.js"></script>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <!-- Startseite -->
-    <body onload="init()"> <!-- Alles, was man sieht -->
+<head> <!-- Zusatzinfo für den Browser-->
+    <title>MPS</title>
+    <link rel="stylesheet" href="Kopfrechnen.css"/>
+    <script src="../html-snippets/navBar/navBar.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<!-- Startseite -->
+<body onload="init()"> <!-- Alles, was man sieht -->
 
-	    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
-	    <script src="../html-snippets/w3-include-HTML.js"></script>
-		<div style="text-align: center;">
-	    <h1>Kopfrechnen</h1>
+    <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+    <script src="../html-snippets/w3-include-HTML.js"></script>
+    <div style="text-align: center;">
+        <h1>Kopfrechnen</h1>
+        <div class = "text">
+            <p>Kennst du das Problem: du stehst beim Bäcker und möchtest ausrechnen wieviel du zahlen musst, brauchst aber ewig lange dafür? Ziemlich nervig oder?<br/>
+                Heutzutage wird überall nur noch mit Computersystemen oder mit dem Taschenrechner gerechnet. Und wenn wir mal nicht beim Bäcker sind oder noch zur Schule gehen, kommen wir gar nicht mehr dazu was im Kopf auszurechnen -  obwohl genau das sehr wichtig ist! Denn bei gutem Training steigerst du nicht nur deine Konzentrationsfähigkeit, sondern schaffst es auch Krankheiten wie beispielsweise Alzheimer aufzuhalten und auch im hohen Alter noch klarzudenken.<br/>Damit sich unser Gehirn schön weiterentwickelt, hast du auf dieser Seite die Möglichkeit Kopfrechenaufgaben zu lösen.
+                Viel Spaß :-)
+            </p>
+        </div>
 
-	    <p>Kennst du das Problem: du stehst beim Bäcker und möchtest ausrechnen wieviel du zahlen musst, brauchst aber ewig lange dafür? Ziemlich nervig oder?
-Heutzutage wird überall nur noch mit Computersystemen oder mit dem Taschenrechner gerechnet. Und wenn wir mal nicht beim Bäcker sind oder noch zur Schule gehen, kommen wir gar nicht mehr dazu was im Kopf auszurechnen -  obwohl genau das sehr wichtig ist! Denn bei gutem Training steigerst du nicht nur deine Konzentrationsfähigkeit, sondern schaffst es auch Krankheiten wie beispielsweise Alzheimer aufzuhalten und auch im hohen Alter noch klarzudenken.
 
-Damit sich unser Gehirn schön weiterentwickelt, hast du auf dieser Seite die Möglichkeit Kopfrechenaufgaben zu lösen.
-Viel Spaß :-)
-	    </p>
+        <script src="Kopfrechnen.js"></script>
+        <script src="utils.js"></script>
 
-	    <script src="Kopfrechnen.js"></script>
-	    <script src="utils.js"></script>
-
-		<span id="left_operand"></span>
-		<span id="operator"></span>
-		<span id="right_operand"></span>
-		<span>=</span>
-	    <input id="result_input"></input>
-	    <br>
-	    <br>
-	    <br>
-		<button id="submit_button" onclick="submit()">Bestätigen</button>
-		<button id="solution_button" onclick="showSolution()">Lösung</button>
-		<button id="next_button" onclick="init()">Nächste Aufgabe</button>
-		<br>
-		<span id="feedback"></span>
-		</div>
-    </body>
+        <span id="left_operand"></span>
+        <span id="operator"></span>
+        <span id="right_operand"></span>
+        <span>=</span>
+        <input id="result_input"></input>
+    <br>
+    <br>
+    <br>
+    <button id="submit_button" onclick="submit()">Bestätigen</button>
+    <button id="solution_button" onclick="showSolution()">Lösung</button>
+    <button id="next_button" onclick="init()">Nächste Aufgabe</button>
+    <br>
+    <span id="feedback"></span>
+    </div>
+</body>
