Startseite Buttons raus + Navbar überarbeitet

--- a/html-snippets/navBar/navBar.html
+++ b/html-snippets/navBar/navBar.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul id="navbar">
-        <li class="parent"><a href="#">Los</a>
+        <li class="parent"><a href="#">Menü</a>
             <ul class="child">
                 <li><a href="../Startseite/Startseite.html">Startseite</a></li>
                 <li class="parent"><a href="#">Mathematik <span class="expand">»</span></a>
@@ -18,12 +18,6 @@
 
                 <li><a href="../Meditation/Meditation.html">Meditation</a></li>
                 <li><a href="../Sketching/Sketching.html">Sketching</a></li>
-            </ul>
-        </li>
-        <li class="parent"><a href="#">Über</a>
-            <ul class="child">
-                <li><a href="#warum">Warum</a></li>
-                <li><a href="#wie funktionierts">Wie funktioniert's?</a></li>
             </ul>
         </li>
     </ul>
