--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -22,7 +22,10 @@
         <div id="Hintergrund1"> <!-- Der Hintergrund des ersten Fensters auf der Startseite -->
             <h1 class="headline"> Willkommen </h1>
             <div id="EinfuehrungsTextBox"> <!-- In dieses Textfeld, kommt die Beschreibung der Seite -->
-                <p class="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende   Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
+                <p class="Einfuehrungstext"> Das Internet ist ein wichtiger Bestandteil in unseren Leben geworden und jeden Tag werden wir mit neuen Information überschüttet. <br/> Dies führt dazu, dass wir gestresst sind und die Fähigkeit verlieren über ein Thema achtsam nachzudenken.<br/>
+Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird.</br> Wir bieten Dir spannende Übungen aus den Bereichen Yoga, Kopfrechnen und Zahlenreihen.
+Lernen Sie sich auf Gedankenspiele und auf kreatives Denken einzulassen mit unseren Methoden wie Sketching und Meditation.
+</p>
             </div>    <!--			<a href="#window2"><button id="button">Start</button></a>-->
         </div>
         <!-- Zweite Hälfte -->
@@ -35,7 +38,7 @@
                     </a>
                     <div class="imgText">
                         Mathematik & Rätsel:
-                        Hier findest du Aufgaben im Bereich Mathematik und Rätsel. Wir haben Kopfrechenaufgaben, Sudokus, und viele weitere interessante Aufgaben, um deine Konzentrationsfähigkeit zu steigern. 
+                        Hier findest du Aufgaben im Bereich Mathematik und Rätsel. Wir haben Kopfrechenaufgaben, Sudokus, und viele weitere interessante Aufgaben, um deine Konzentrationsfähigkeit zu steigern.
                     </div>
                 </div>
                 <div class="mySlides fade">
@@ -100,11 +103,11 @@
                 <div class="three"><button onclick="window.location.href = '../Meditation/Meditation.html';">Meditation</button></div>
                 <div class="five"><button onclick="window.location.href = '../Sketching/Sketching.html';">Sketching</button></div>
                 <div class="four"><button onclick="window.location.href = '../Mathematik/Sudoku.html';">Sudoku</button></div>
-                <div class="two"><button onclick="window.location.href = '../Mathematik/Kopfrechnen.html';">Kopfrechnen</button></div> 
+                <div class="two"><button onclick="window.location.href = '../Mathematik/Kopfrechnen.html';">Kopfrechnen</button></div>
             </div>
 
         </div>-->
-        
+
         <div class="wrap">
             <button onclick="window.location.href = '../Mathematik/Zahlenreihen.html';">Zahlenreihen</button>
         </div>
