alle Seiten anpassen (Schriftgrößen, Bündigkeit, Zeilenumbrüche)

--- a/Mathematik/Zahlenreihen.html
+++ b/Mathematik/Zahlenreihen.html
@@ -16,11 +16,12 @@
 
 		<h1>Zahlenreihen</h1>
 
-	   
+		<div class = "text">
 		<p>So wie mit Kopfrechenaufgaben, kannst du auch sehr gut mit Zahlenreihen deine Konzentrationsfähigkeit steigern. Hier noch ein kleines Beispiel wie man solche Zahlenreihen berechnet:<br/>
-2,5,7,10,12,15
-Bei dieser Zahlenreihe wird abwechselnd erst eine 3 und dann eine 2 dazu addiert. Also müsste nach der 15 die 17 kommen 
-</p>
+			2,5,7,10,12,15
+			Bei dieser Zahlenreihe wird abwechselnd erst eine 3 und dann eine 2 dazu addiert. Also müsste nach der 15 die 17 kommen 
+		</p>
+		</div>
 
 
 
