--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -14,7 +14,7 @@
 
 
         <div style="text-align: center; width: 100%;">
-            <h1>Sketching</h1>
+            <h1 class = "headline">Sketching</h1>
 
 
             <script src="themen.js"></script>
