Projekt Name geändert

--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -16,7 +16,7 @@
 
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
-            <h1 class="headline">MPS Cooler Projekttitel</h1>
+            <h1 class="headline">Mind Focus</h1>
             <img src ="./brain.jpg" class="center">
         </div>
         <div id="Hintergrund1"> <!-- Der Hintergrund des ersten Fensters auf der Startseite -->
